--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -21,9 +21,9 @@
             <ul>
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
-                <li>LOGO</li><!--legg inn bilde av logo her-->
+                <li><a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a></li>
                 <li><a href="#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
-                <li><a href="#">kontakt oss</a></li>
+                <li><a href="#contact">kontakt oss</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                 <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -32,9 +32,12 @@
     </header>
     
 
+
+
+
     <footer>
         <section>
-            <p>LOGO</p><!--Bytt ut logo med selve logoen i en imgtag-->
+            <a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a>
             <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
          </section>
          <section id="contact">
@@ -50,14 +53,14 @@
             <h4>SNARVEIER</h4>
             <nav>
                 <ul>
-                    <li><a href="#">Produkter</a></li>
-                    <li><a href="#">Katergorier</a></li>
+                    <li><a href="popprodukter">Produkter</a></li>
+                    <li><a href="popkategorier">Katergorier</a></li>
                     <li><a href="#contact">Kontakt oss</a></li>
                 </ul>
             </nav>
          </section>   
          <section>
-            <h4>Sosiale medier</h4>
+            <h4>Sosiale medier</h3>
             <ul>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
