startet med css og definert et grid for mobil

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -11,63 +11,64 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <form> <!--gjør om label til hidden, så skjermoppleser kan lese det-->
-                <label for="search">Søk</label>
-                <input type="search" placeholder="Søk her" id="search">
-                <input type="submit" value="Søk">
-            </form>
-            <ul>
-                <li><a href="index.html">Hjem</a></li>
-                <li><a href="#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
-                <li><a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a></li>
-                <li><a href="#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
-                <li><a href="#contact">kontakt oss</a></li>
-                <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
-                <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
-                <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-            </ul>
-        </nav>
-    </header>
-    
-
-
-
-
-    <footer>
-        <section>
-            <a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a>
-            <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
-         </section>
-         <section id="contact">
-            <h4>KONTAKT</h4>
-            <ul>
-                <li><i class="fa-solid fa-location-dot"></i>Adresse: B R A veien 22, 1757 HALDEN</li>
-                <li><i class="fa-solid fa-phone"></i>Telefon: 96 60 80 00</li>
-                <li><i class="fa-solid fa-envelope"></i>E-post: halden@hiof.no</li>
-                <li><i class="fa-solid fa-clock"></i>Åpningstider: 08 - 16</li>
-            </ul>
-         </section>
-         <section>
-            <h4>SNARVEIER</h4>
+    <div id="grid-container">
+        <header>
             <nav>
+                <form> <!--gjør om label til hidden, så skjermoppleser kan lese det-->
+                    <label for="search">Søk</label>
+                    <input type="search" placeholder="Søk her" id="search">
+                    <input type="submit" value="Søk">
+                </form>
                 <ul>
-                    <li><a href="popprodukter">Produkter</a></li>
-                    <li><a href="popkategorier">Katergorier</a></li>
-                    <li><a href="#contact">Kontakt oss</a></li>
+                    <li><a href="index.html">Hjem</a></li>
+                    <li><a href="#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
+                    <li><a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a></li>
+                    <li><a href="#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
+                    <li><a href="#contact">kontakt oss</a></li>
+                    <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                    <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </nav>
-         </section>   
-         <section>
-            <h4>Sosiale medier</h3>
-            <ul>
-                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
-            </ul>
-         </section>
-    </footer>
+        </header>
+        <main>
+           
+        </main>
+
+        <footer>
+            <section>
+                <a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a>
+                <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
+            </section>
+            <section id="contact">
+                <h4>KONTAKT</h4>
+                <ul>
+                    <li><i class="fa-solid fa-location-dot"></i>Adresse: B R A veien 22, 1757 HALDEN</li>
+                    <li><i class="fa-solid fa-phone"></i>Telefon: 96 60 80 00</li>
+                    <li><i class="fa-solid fa-envelope"></i>E-post: halden@hiof.no</li>
+                    <li><i class="fa-solid fa-clock"></i>Åpningstider: 08 - 16</li>
+                </ul>
+            </section>
+            <section>
+                <h4>SNARVEIER</h4>
+                <nav>
+                    <ul>
+                        <li><a href="popprodukter">Produkter</a></li>
+                        <li><a href="popkategorier">Katergorier</a></li>
+                        <li><a href="#contact">Kontakt oss</a></li>
+                    </ul>
+                </nav>
+            </section>   
+            <section>
+                <h4>Sosiale medier</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+                </ul>
+            </section>
+        </footer>
+    </div>
 </body>
 </html>
