gjort så og si ferdig header og footer malen

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="index.html">Hjem</a></li>
                     <li><a href="#popprodukter">Produkter</a></li> <!--husk å legg id på seksjon med populære produkter-->
-                    <li><a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a></li>
+                    <li><a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a></li>
                     <li><a href="#popkategorier">kategorier</a></li> <!--husk å legg id på seksjon med populære kategorier-->
                     <li><a href="#contact">kontakt oss</a></li>
                     <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
@@ -37,7 +37,7 @@
 
         <footer>
             <section>
-                <a href="index.html"><img src="img/logo.png" alt="nettsted logo"></a>
+                <a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a>
                 <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
             </section>
             <section id="contact">
@@ -60,7 +60,7 @@
                 </nav>
             </section>   
             <section>
-                <h4>Sosiale medier</h3>
+                <h4>Sosiale medier</h4>
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
