startet på kategori seksjonen og delt opp i sections for de andre
lagde også en mal som kan brukes til de andre sidene, siden de skal ha lik header og footer

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -32,7 +32,26 @@
             </nav>
         </header>
         <main>
-           
+            <!--BANNER (skal utvides så drøyer med denne)-->
+           <section></section>
+
+           <!--populære produkter (skal utvides så drøyer med denne)--> 
+           <section id="popprodukter"></section> 
+
+           <!--populære kategorier-->
+           <section id="popkategorier">
+            <h2>Våre mest populære kategorier</h2>
+            <p>Opplev det beste av det beste!</p>
+
+            <article class="category-card"><h3>kategori 1</h3></article>
+            <article class="category-card"><h3>kategori 2</h3></article>
+            <article class="category-card"><h3>kategori 3</h3></article>
+            <article class="category-card"><h3>kategori 4</h3></article>
+            <article class="category-card"><h3>kategori 5</h3></article>
+           </section>
+
+           <!--Annmeldelser (skal utvides så drøyer med denne)-->
+           <section></section>
         </main>
 
         <footer>
