startet med banneret, merk at dette må byttesi senere oppgaver

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -33,7 +33,11 @@
         </header>
         <main>
             <!--BANNER (skal utvides så drøyer med denne)-->
-           <section></section>
+           <section id="banner">
+            <h3>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.</h3>
+            <p>debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus</p>
+            <a href="#">Prøv gratis i 30 dager.</a>
+           </section>
 
            <!--populære produkter (skal utvides så drøyer med denne)--> 
            <section id="popprodukter"></section> 
@@ -43,11 +47,22 @@
             <h2>Våre mest populære kategorier</h2>
             <p>Opplev det beste av det beste!</p>
 
-            <article class="category-card"><h3>kategori 1</h3></article>
-            <article class="category-card"><h3>kategori 2</h3></article>
-            <article class="category-card"><h3>kategori 3</h3></article>
-            <article class="category-card"><h3>kategori 4</h3></article>
-            <article class="category-card"><h3>kategori 5</h3></article>
+            <article class="category-card">
+                <h3>kategori 1</h3>
+            </article>
+            <article class="category-card">
+                <h3>kategori 2</h3>
+            </article>
+            <article class="category-card">
+                <h3>kategori 3</h3>
+            </article>
+            <article class="category-card">
+                <h3>kategori 4</h3>
+            </article>
+            <article class="category-card">
+                <h3>kategori 5</h3>
+            </article>
+
            </section>
 
            <!--Annmeldelser (skal utvides så drøyer med denne)-->
