lagd våre mest populære produkter for minstekrav uten css

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -40,7 +40,52 @@
            </section>
 
            <!--populære produkter (skal utvides så drøyer med denne)--> 
-           <section id="popprodukter"></section> 
+           <section id="popprodukter">
+            <h2>Våre mest populære produkter</h2>
+            <p>Opplev det beste av det beste!</p>
+            <!--spør om dette, kan byttes ut med 3 p tagger-->
+            <button>Nye produkter</button>
+            <button>Tilbud</button>
+            <button>Best-selgere</button>
+            <section class="product-container">
+            <article class="products"><img src="#" alt="beskrivelse av produkt">
+            <h4>Produktnavn</h4>
+            <p>ut aut reiciendis voluptatibus maiores</p>
+            <p>Pris: kr</p>
+            
+            </article>
+            <article class="products"><img src="#" alt="beskrivelse av produkt">
+            <h4>Produktnavn</h4>
+            <p>ut aut reiciendis voluptatibus maiores</p>
+            <p>Pris: kr</p>
+            </article>
+            
+            <article class="products"><img src="#" alt="beskrivelse av produkt">
+            <h4>Produktnavn</h4>
+            <p>ut aut reiciendis voluptatibus maiores</p>
+            <p>Pris: kr</p>
+            </article>
+
+            <article class="products"><img src="#" alt="beskrivelse av produkt">
+            <h4>Produktnavn</h4>
+            <p>ut aut reiciendis voluptatibus maiores</p>
+            <p>Pris: kr</p>
+            </article>
+
+            <article class="products"><img src="#" alt="beskrivelse av produkt">
+            <h4>Produktnavn</h4>
+            <p>ut aut reiciendis voluptatibus maiores</p>
+            <p>Pris: kr</p>
+            </article>
+
+            <article class="products"><img src="#" alt="beskrivelse av produkt">
+            <h4>Produktnavn</h4>
+            <p>ut aut reiciendis voluptatibus maiores</p>
+            <p>Pris: kr</p>
+            </article>
+            </section>
+
+           </section> 
 
            <!--populære kategorier-->
            <section id="popkategorier">
