--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -152,37 +152,37 @@
             
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
-                <h4>Peter parker</h4>
+                <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
-                <h4>Peter parker</h4>
+                <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
-                <h4>Peter parker</h4>
+                <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
-                <h4>Peter parker</h4>
+                <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
-                <h4>Peter parker</h4>
+                <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
-                <h4>Peter parker</h4>
+                <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
            
@@ -197,10 +197,10 @@
             <section id="contact">
                 <h4>KONTAKT</h4>
                 <ul>
-                    <li><i class="fa-solid fa-location-dot"></i>Adresse: B R A veien 22, 1757 HALDEN</li>
-                    <li><i class="fa-solid fa-phone"></i>Telefon: 96 60 80 00</li>
-                    <li><i class="fa-solid fa-envelope"></i>E-post: halden@hiof.no</li>
-                    <li><i class="fa-solid fa-clock"></i>Åpningstider: 08 - 16</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Adresse: B R A veien 22, 1757 HALDEN</li>
+                    <li><i class="fa-solid fa-phone"></i> Telefon: 96 60 80 00</li>
+                    <li><i class="fa-solid fa-envelope"></i> E-post: halden@hiof.no</li>
+                    <li><i class="fa-solid fa-clock"></i> Åpningstider: 08 - 16</li>
                 </ul>
             </section>
             <section>
