gjort klar bilder til kategoriene men fikk ikke plasert de
nå er de komentert ut

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -129,16 +129,20 @@
             <p>Opplev det beste av det beste!</p>
 
             <article class="category-card">
-                <h3>kategori 1</h3>
+                <h3>Sneakers</h3>
+                <!--<img src="img/sneakers-category.jpg" alt="hvite nike-sneakers med grå bakgrunn">-->
             </article>
             <article class="category-card">
-                <h3>kategori 2</h3>
+                <h3>Løpesko</h3>
+               <!-- <img src="img/løpesko-category.jpg" alt="hvite adidas-løpesko med sort bakgrunn">-->
             </article>
             <article class="category-card">
-                <h3>kategori 3</h3>
+                <h3>Pensko</h3>
+                 <!-- <img src="img/pensko.jpg" alt="brune oxfordsko">-->
             </article>
             <article class="category-card">
-                <h3>kategori 4</h3>
+                <h3>Boots</h3>
+                <!-- <img src="img/boots-category.jpg" alt="brune timberland-boots"> -->
             </article>
             <article class="category-card">
                 <h3>kategori 5</h3>
