--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -194,7 +194,7 @@
         </main>
 
         <footer>
-            <section>
+            <section id="footer-logo">
                 <a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a>
                 <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
             </section>
@@ -207,7 +207,7 @@
                     <li><i class="fa-solid fa-clock"></i> Åpningstider: 08 - 16</li>
                 </ul>
             </section>
-            <section>
+            <section id="snarveier">
                 <h4>SNARVEIER</h4>
                 <nav>
                     <ul>
@@ -217,7 +217,7 @@
                     </ul>
                 </nav>
             </section>   
-            <section>
+            <section id="some">
                 <h4>Sosiale medier</h4>
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
