gjort populære produkter responsiv til desktop

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -151,7 +151,7 @@
            </section>
 
            <!--Annmeldelser (skal utvides så drøyer med denne)-->
-           <section class="column-container">
+           <section class="annmeldelser">
             <h3>Annmeldelser</h3>
             
             <article class="review">
