fikset lenkefeil i mal

--- a/Eksamen-2024/mal.html
+++ b/Eksamen-2024/mal.html
@@ -53,8 +53,8 @@
                 <h4>SNARVEIER</h4>
                 <nav>
                     <ul>
-                        <li><a href="popprodukter">Produkter</a></li>
-                        <li><a href="popkategorier">Katergorier</a></li>
+                        <li><a href="#popprodukter">Produkter</a></li>
+                        <li><a href="#popkategorier">Katergorier</a></li>
                         <li><a href="#contact">Kontakt oss</a></li>
                     </ul>
                 </nav>
