--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -130,22 +130,23 @@
 
             <article class="category-card">
                 <h3>Sneakers</h3>
-                <!--<img src="img/sneakers-category.jpg" alt="hvite nike-sneakers med grå bakgrunn">-->
+                <img src="img/sneakers-category.jpg" alt="hvite nike-sneakers med grå bakgrunn">
             </article>
             <article class="category-card">
                 <h3>Løpesko</h3>
-               <!-- <img src="img/løpesko-category.jpg" alt="hvite adidas-løpesko med sort bakgrunn">-->
+                <img src="img/løpesko-category.jpg" alt="hvite adidas-løpesko med sort bakgrunn">
             </article>
             <article class="category-card">
                 <h3>Pensko</h3>
-                 <!-- <img src="img/pensko.jpg" alt="brune oxfordsko">-->
+                <img src="img/pensko.jpg" alt="brune oxfordsko">
             </article>
             <article class="category-card">
                 <h3>Boots</h3>
-                <!-- <img src="img/boots-category.jpg" alt="brune timberland-boots"> -->
+                <img src="img/boots-category.jpg" alt="brune timberland-boots">
             </article>
             <article class="category-card">
-                <h3>kategori 5</h3>
+                <h3>Designer</h3>
+                <img src="img/designer-category.jpg" alt="grønne nike-dunks mot grønn bakgrunn">
             </article>
 
            </section>
