--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -140,11 +140,11 @@
                 <h3>Pensko</h3>
                 <img src="img/pensko.jpg" alt="brune oxfordsko">
             </article>
-            <article class="category-card">
+            <article id="big-category" class="category-card">
                 <h3>Boots</h3>
                 <img src="img/boots-category.jpg" alt="brune timberland-boots">
             </article>
-            <article class="category-card">
+            <article id="small-category" class="category-card">
                 <h3>Designer</h3>
                 <img src="img/designer-category.jpg" alt="grønne nike-dunks mot grønn bakgrunn">
             </article>
