--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -56,7 +56,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
@@ -66,7 +66,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
@@ -76,7 +76,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
@@ -86,7 +86,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
@@ -96,7 +96,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
@@ -106,7 +106,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike Sportwear">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
@@ -116,7 +116,7 @@
                     <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
                     <img src="img/nike-dunks-1280.jpg" alt="Nike-">
                 </picture>
-                <h4>Nike Dunks</h4>
+                <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
             </article>
 
