--- a/Eksamen-2024/mal.html
+++ b/Eksamen-2024/mal.html
@@ -31,25 +31,23 @@
                 </ul>
             </nav>
         </header>
-        <main>
-           
-        </main>
+    
 
         <footer>
-            <section>
+            <section id="footer-logo">
                 <a href="index.html"><img class="mainlogo" src="img/logo.png" alt="nettsted logo"></a>
                 <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
             </section>
             <section id="contact">
                 <h4>KONTAKT</h4>
                 <ul>
-                    <li><i class="fa-solid fa-location-dot"></i>Adresse: B R A veien 22, 1757 HALDEN</li>
-                    <li><i class="fa-solid fa-phone"></i>Telefon: 96 60 80 00</li>
-                    <li><i class="fa-solid fa-envelope"></i>E-post: halden@hiof.no</li>
-                    <li><i class="fa-solid fa-clock"></i>Åpningstider: 08 - 16</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Adresse: B R A veien 22, 1757 HALDEN</li>
+                    <li><i class="fa-solid fa-phone"></i> Telefon: 96 60 80 00</li>
+                    <li><i class="fa-solid fa-envelope"></i> E-post: halden@hiof.no</li>
+                    <li><i class="fa-solid fa-clock"></i> Åpningstider: 08 - 16</li>
                 </ul>
             </section>
-            <section>
+            <section id="snarveier">
                 <h4>SNARVEIER</h4>
                 <nav>
                     <ul>
@@ -59,7 +57,7 @@
                     </ul>
                 </nav>
             </section>   
-            <section>
+            <section id="some">
                 <h4>Sosiale medier</h4>
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
