byttet ut bilder i kategorier med background img

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -128,25 +128,25 @@
             <h2>Våre mest populære kategorier</h2>
             <p>Opplev det beste av det beste!</p>
 
-            <article class="category-card">
+            <article id="cat1" class="category-card">
                 <h3>Sneakers</h3>
-                <img src="img/sneakers-category.jpg" alt="hvite nike-sneakers med grå bakgrunn">
+                <!--<img src="img/sneakers-category.jpg" alt="hvite nike-sneakers med grå bakgrunn">-->
             </article>
-            <article class="category-card">
+            <article id="cat2" class="category-card">
                 <h3>Løpesko</h3>
-                <img src="img/løpesko-category.jpg" alt="hvite adidas-løpesko med sort bakgrunn">
+                <!--<img src="img/løpesko-category.jpg" alt="hvite adidas-løpesko med sort bakgrunn">-->
             </article>
-            <article class="category-card">
+            <article id="cat3" class="category-card">
                 <h3>Pensko</h3>
-                <img src="img/pensko.jpg" alt="brune oxfordsko">
+                <!--<img src="img/pensko.jpg" alt="brune oxfordsko">-->
             </article>
-            <article id="big-category" class="category-card">
+            <article id="cat4" class="category-card">
                 <h3>Boots</h3>
-                <img src="img/boots-category.jpg" alt="brune timberland-boots">
+                <!--<img src="img/boots-category.jpg" alt="brune timberland-boots">-->
             </article>
-            <article id="small-category" class="category-card">
+            <article id="cat5" class="category-card">
                 <h3>Designer</h3>
-                <img src="img/designer-category.jpg" alt="grønne nike-dunks mot grønn bakgrunn">
+                <!--<img src="img/designer-category.jpg" alt="grønne nike-dunks mot grønn bakgrunn">-->
             </article>
 
            </section>
