karakterkrav d product.html

--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -39,59 +39,45 @@
                     <li>Produkter</li>
                 </ul>
             </nav>
+        <section class="produkt-sammendrag">
             <section class="product-container">
-                <article>
-                    <picture>
-                        <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
-                        <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                        <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-                    </picture>
+                <article id="bigpic">
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
                 </article>
 
                 <article>
-                    <picture>
-                        <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
-                        <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                        <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-                    </picture>
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
                 </article>
 
                 <article>
-                    <picture>
-                        <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
-                        <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                        <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-                    </picture>
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
                 </article>
-
                 <article>
-                    <picture>
-                        <source media="(max-width:400px)" srcset="img/nike-dunks-640.jpg">
-                        <source media="(max-width:800px)" srcset="img/nike-dunks-1920.jpg">
-                        <img src="img/nike-dunks-1280.jpg" alt="Nike-">
-                    </picture>
+                    <img src="img/nike-dunks-1280.jpg" alt="Nike-">
                 </article>
             </section>
-            <section>
-                <h2>Merkenavn</h2>
+            <section class="produktinfo">
+                <h2>Nike Dunks</h2>
+                <h3><a href="#">NIKE</a></h3>
                 <p>Pris: 1299kr</p>
                 <p>farge: Gul/blå</p>
             </section>
-
-            <aside>
-                <article>
+        </section>
+            <h3>Lignende produkter</h3>
+            <aside class="column-container">
+                <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
                 </article>  
 
-                <article>
+                <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
                 </article>  
 
-                <article>
+                <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
                 </article>  
 
-                <article>
+                <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
                 </article>  
             </aside>
