--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -155,6 +155,7 @@
            <section class="annmeldelser">
             <h3>Annmeldelser</h3>
             
+            <div id="scroll">
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
@@ -190,7 +191,7 @@
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
-           
+        </div>
            </section>
         </main>
 
