fikset scroll funksjon

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -152,10 +152,8 @@
            </section>
 
            <!--Annmeldelser (skal utvides så drøyer med denne)-->
+           <h3 class="ann-overskrift">Annmeldelser</h3>
            <section class="annmeldelser">
-            <h3>Annmeldelser</h3>
-            
-            <div id="scroll">
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
@@ -191,7 +189,7 @@
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
             </article>
-        </div>
+    
            </section>
         </main>
 
