lagt til fler annmeldelse kort og ikoner på et produktkort

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -58,6 +58,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
             <article class="products">
@@ -154,6 +156,30 @@
            <!--Annmeldelser (skal utvides så drøyer med denne)-->
            <h3 class="ann-overskrift">Annmeldelser</h3>
            <section class="annmeldelser">
+            <article class="review">
+                <img src="img/profile-cat.jpg" alt="profilbilde av katt">
+                <h4>Peter Pusur</h4>
+                <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+            </article>
+
+            <article class="review">
+                <img src="img/profile-cat.jpg" alt="profilbilde av katt">
+                <h4>Peter Pusur</h4>
+                <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+            </article>
+
+            <article class="review">
+                <img src="img/profile-cat.jpg" alt="profilbilde av katt">
+                <h4>Peter Pusur</h4>
+                <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+            </article>
+
+            <article class="review">
+                <img src="img/profile-cat.jpg" alt="profilbilde av katt">
+                <h4>Peter Pusur</h4>
+                <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+            </article>
+
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
