lagt til ikoner og ordnet ifordhold til bildene i oppgaven

--- a/Eksamen-2024/index.html
+++ b/Eksamen-2024/index.html
@@ -70,6 +70,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
             <article class="products">
@@ -80,6 +82,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
             <article class="products">
@@ -90,6 +94,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
             <article class="products">
@@ -100,6 +106,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
             <article class="products">
@@ -110,6 +118,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
             <article class="products">
@@ -120,6 +130,8 @@
                 </picture>
                 <h4><a href="product.html">Nike Dunks</a></h4>
                 <p>Pris: 1299kr</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                <p>287 reviews</p>
             </article>
 
            </section> 
@@ -160,60 +172,70 @@
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
 
             <article class="review">
                 <img src="img/profile-cat.jpg" alt="profilbilde av katt">
                 <h4>Peter Pusur</h4>
                 <p>Sed hendrerit leo at velit lobortis volutpat. Nam tempus laoreet tortor at efficitur. Praesent sollicitudin arcu mi, a condimentum leo rhoncus eu.</p>
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
             </article>
     
            </section>
