--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -67,18 +67,38 @@
             <aside class="column-container">
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
                 </article>  
 
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
                 </article>  
 
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
                 </article>  
 
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
+                    <p>Adidas fly</p>
+                    <p><a href="#">ADIDAS</a></p>
+                    <p>pris: 899kr</p>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <p>144 reviews</p>
                 </article>  
             </aside>
         </main>
