lagt til ikoner og legg i handlekurv knap og dropdown meny for å velge størelse

--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -61,6 +61,22 @@
                 <h3><a href="#">NIKE</a></h3>
                 <p>Pris: 1299kr</p>
                 <p>farge: Gul/blå</p>
+                <form>
+                    <label>
+                        <select required> 
+                            <!-- Drop-down meny for å velge land, hvor det er påkrevd å velge noe -->
+                            <option value="">Velg en størelse</option> <!-- Placeholder-valg -->
+                            <option value="S">Small</option> 
+                            <option value="M">Medium</option> 
+                            <option value="L">Large</option> 
+                            <option value="XL">Extra Large</option> 
+                        </select>
+                    </label>
+                </form>
+                <section>
+                <a href="#">Legg i handlekurv</a>
+                <i class="fa-regular fa-heart"></i>
+                </section>
             </section>
         </section>
             <h3>Lignende produkter</h3>
