fikser lignende produkter i krav c

--- a/Eksamen-2024/product.html
+++ b/Eksamen-2024/product.html
@@ -79,7 +79,9 @@
                 </section>
             </section>
         </section>
+        <section id="liknende-produkter">
             <h3>Lignende produkter</h3>
+            <a href="#">Flere liknende produkter <i class="fa-solid fa-arrow-right"></i></a>
             <aside class="column-container">
                 <article class="products">
                     <img src="img/løpesko-category.jpg" alt="">
@@ -117,6 +119,7 @@
                     <p>144 reviews</p>
                 </article>  
             </aside>
+        </section>
         </main>
        
 
